# slb

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  README.md  STATUS.md
include/slb/: functional.hpp  string_view.hpp  tuple.hpp  type_traits.hpp  utility.hpp
include/slb/detail/: config.hpp  invoke.hpp  lib.hpp
test/: CMakeLists.txt  README.md  catch.cpp  catch.hpp  string_view.cpp  test_utils.hpp  type_traits.cpp  utility.cpp
test/functional/: bind.cpp  invoke.cpp  mem_fn.cpp  not_fn.cpp  operators.cpp  refwrap.cpp
